--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -127,15 +127,16 @@ jobs:
           # 常用LuCI插件选择:
           cat >> .config <<EOF
             CONFIG_PACKAGE_luci-app-adbyby-plus=y
-            CONFIG_PACKAGE_luci-app-aria2=y
+          # CONFIG_PACKAGE_luci-app-aria2=y
             CONFIG_PACKAGE_luci-app-baidupcs-web=y
             CONFIG_PACKAGE_luci-app-docker=y
             CONFIG_PACKAGE_luci-app-frpc=y
-            CONFIG_PACKAGE_luci-app-kodexplorer=y
-            CONFIG_PACKAGE_luci-app-minidlna=y
-            CONFIG_PACKAGE_luci-app-openvpn=y
-            CONFIG_PACKAGE_luci-app-openvpn-server=y
-            CONFIG_PACKAGE_luci-app-qbittorrent=y
+            CONFIG_PACKAGE_luci-app-frps=y
+          # CONFIG_PACKAGE_luci-app-kodexplorer=y
+          # CONFIG_PACKAGE_luci-app-minidlna=y
+          # CONFIG_PACKAGE_luci-app-openvpn=y
+          # CONFIG_PACKAGE_luci-app-openvpn-server=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent=y
             CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
             CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
             CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
@@ -147,6 +148,9 @@ jobs:
             CONFIG_PACKAGE_luci-app-webadmin=y
             CONFIG_PACKAGE_luci-app-wireguard=y
             CONFIG_PACKAGE_luci-app-wrtbwmon=y
+            CONFIG_PACKAGE_luci-app-vlmcsd=y
+            CONFIG_PACKAGE_luci-app-vlmcsd=y
+            CONFIG_PACKAGE_luci-app-unblockmusic=y
           EOF
           # LuCI主题:
           cat >> .config <<EOF
